force-app/zurich-base/main/default/objects/Activity/fields/Acta__c.field-meta.xml
<CustomField>
    <fullName>Acta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relación con el nuevo objeto Acta</description>
    <label>Acta</label>
    <referenceTo>Acta__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>