force-app/zurich-base/main/default/objects/Activity/fields/ActaLink__c.field-meta.xml
<CustomField>
    <fullName>ActaLink__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;&amp;Acta__r.Id, Acta__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acta</label>
    <type>Text</type>
</CustomField>