force-app/zurich-base/main/default/objects/Activity/fields/Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information__c</fullName>
    <description>Información adicional</description>
    <label>Additional Information</label>
    <type>TextArea</type>
</CustomField>