force-app/zurich-base/main/default/objects/Activity/fields/ANI__c.field-meta.xml
<CustomField>
    <fullName>ANI__c</fullName>
    <description>Número origen de la interacción</description>
    <label>ANI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>