force-app/zurich-base/main/default/objects/Activity/fields/ANIPhone__c.field-meta.xml
<CustomField>
    <fullName>ANIPhone__c</fullName>
    <description>Hay un flow que rellena este campo con ANI si no es un correo</description>
    <label>ANI Phone</label>
    <type>Phone</type>
</CustomField>