force-app/zurich-base/main/default/objects/Activity/fields/BestAgent__c.field-meta.xml
<CustomField>
    <fullName>BestAgent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>OCS - El WebSservice envía a Genesys el mejor agente</description>
    <label>Best Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>