force-app/zurich-base/main/default/objects/Activity/fields/CallRecording__c.field-meta.xml
<CustomField>
    <fullName>CallRecording__c</fullName>
    <description>Redirige a Genesys Cloud, donde se podrá ver los detalles de la interacción (grabación, encuestas, etc)</description>
    <formula>HYPERLINK(&quot;https://apps.mypurecloud.ie/directory/#/engage/admin/interactions/&quot;&amp; CallObject, &quot;Genesys Cloud&quot;)</formula>
    <label>Call Recording</label>
    <type>Text</type>
</CustomField>