force-app/zurich-base/main/default/objects/Activity/fields/CampaignMemberID__c.field-meta.xml
<CustomField>
    <fullName>CampaignMemberID__c</fullName>
    <label>Campaign Member Identifier</label>
    <length>18</length>
    <type>Text</type>
</CustomField>