force-app/zurich-base/main/default/objects/Activity/fields/CaseMediator__c.field-meta.xml
<CustomField>
    <fullName>CaseMediator__c</fullName>
    <label>Case Mediator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>