force-app/zurich-base/main/default/objects/Activity/fields/ClienteMediado__c.field-meta.xml
<CustomField>
    <fullName>ClienteMediado__c</fullName>
    <label>Cliente Mediado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>