force-app/zurich-base/main/default/objects/Activity/fields/ClosingObservation__c.field-meta.xml
<CustomField>
    <fullName>ClosingObservation__c</fullName>
    <label>Observación del Cierre</label>
    <type>TextArea</type>
</CustomField>