force-app/zurich-base/main/default/objects/Activity/fields/CommercialActionType__c.field-meta.xml
<CustomField>
    <fullName>CommercialActionType__c</fullName>
    <label>Commercial action type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>Profitability</fullName>
            </value>
            <value>
                <fullName>Operations and tools</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Campaigns</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>