force-app/zurich-base/main/default/objects/Activity/fields/CommunicationType__c.field-meta.xml
<CustomField>
    <fullName>CommunicationType__c</fullName>
    <description>SDM: Tipología de comunicación</description>
    <label>Communication Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Products and services</fullName>
            </value>
            <value>
                <fullName>Operations and tools</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Campaigns</fullName>
            </value>
            <value>
                <fullName>Other communications</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>