force-app/zurich-base/main/default/objects/Activity/fields/Customer_name__c.field-meta.xml
<CustomField>
    <fullName>Customer_name__c</fullName>
    <description>Nombre del cliente</description>
    <label>Customer name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>