force-app/zurich-base/main/default/objects/Activity/fields/CustomerInterest__c.field-meta.xml
<CustomField>
    <fullName>CustomerInterest__c</fullName>
    <description>KLINC:  Indica si el cliente ha mostrado interés</description>
    <label>Customer&apos;s interest</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Klinc_CallResult__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>Not interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>