force-app/zurich-base/main/default/objects/Activity/fields/DNIS__c.field-meta.xml
<CustomField>
    <fullName>DNIS__c</fullName>
    <description>Número destino de la interacción</description>
    <label>DNIS</label>
    <type>Phone</type>
</CustomField>