force-app/zurich-base/main/default/objects/Activity/fields/DNISPhone__c.field-meta.xml
<CustomField>
    <fullName>DNISPhone__c</fullName>
    <description>Hay un flow que rellena este campo con DNIS si no es un correo</description>
    <label>DNIS Phone</label>
    <type>Phone</type>
</CustomField>