force-app/zurich-base/main/default/objects/Activity/fields/Follow_up_type__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_type__c</fullName>
    <description>Se indica la entidad a la que se le va a realizar el seguimiento</description>
    <label>Follow up type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Póliza</fullName>
            </value>
            <value>
                <fullName>Oferta</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>