force-app/zurich-base/main/default/objects/Activity/fields/FollowUp__c.field-meta.xml
<CustomField>
    <fullName>FollowUp__c</fullName>
    <label>Follow up</label>
    <type>TextArea</type>
</CustomField>