force-app/zurich-base/main/default/objects/Activity/fields/GenesysCloudInteractionTranscript__c.field-meta.xml
<CustomField>
    <fullName>GenesysCloudInteractionTranscript__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Genesys Cloud Interaction Transcript</label>
    <referenceTo>purecloud__PureCloud_Chat_Transcript__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>