force-app/zurich-base/main/default/objects/Activity/fields/GenesysCloudSLA__c.field-meta.xml
<CustomField>
    <fullName>GenesysCloudSLA__c</fullName>
    <description>SLA aplicado para priorizar interacciones de Genesys. La magnitud utilizada es minutos. Una interacción creada con un SLA de 1440 se envejecería artificialmente 24 horas. Una vez creada la interacción en Genesys, allí el número crece a un ritmo de 1 por minuto sin atender.</description>
    <label>Genesys Cloud SLA</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>