force-app/zurich-base/main/default/objects/Activity/fields/GenesysQueue__c.field-meta.xml
<CustomField>
    <fullName>GenesysQueue__c</fullName>
    <label>Genesys Queue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>