force-app/zurich-base/main/default/objects/Activity/fields/IdentifiedByANI__c.field-meta.xml
<CustomField>
    <fullName>IdentifiedByANI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>OCS - Informes: estadística de cuántos clientes han sido identificados por ANI__c</description>
    <label>Identified By ANI</label>
    <type>Checkbox</type>
</CustomField>