force-app/zurich-base/main/default/objects/Activity/fields/IdentifiedByNIF__c.field-meta.xml
<CustomField>
    <fullName>IdentifiedByNIF__c</fullName>
    <defaultValue>false</defaultValue>
    <description>OCS - Informes: estadística de cuántos clientes han sido identificados por NationalId__c</description>
    <label>Identified By NIF</label>
    <type>Checkbox</type>
</CustomField>