force-app/zurich-base/main/default/objects/Activity/fields/InboundOutbound__c.field-meta.xml
<CustomField>
    <fullName>InboundOutbound__c</fullName>
    <description>OCS</description>
    <label>Inbound/Outbound</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>