force-app/zurich-base/main/default/objects/Activity/fields/Iniciativa__c.field-meta.xml
<CustomField>
    <fullName>Iniciativa__c</fullName>
    <label>Iniciativa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SoW Pymes</fullName>
            </value>
            <value>
                <fullName>SoW Vida</fullName>
            </value>
            <value>
                <fullName>Diversa</fullName>
            </value>
            <value>
                <fullName>Expats</fullName>
            </value>
            <value>
                <fullName>Grupos</fullName>
            </value>
            <value>
                <fullName>Top 10 Vida</fullName>
            </value>
            <value>
                <fullName>Conectividad</fullName>
            </value>
            <value>
                <fullName>Smart Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>