force-app/zurich-base/main/default/objects/Activity/fields/Intent__c.field-meta.xml
<CustomField>
    <fullName>Intent__c</fullName>
    <description>Identifica la intención del cliente recogida en el NLU de pregunta abierta. Sólo vendrá informado si la llamada llega a través de dicho NLU</description>
    <inlineHelpText>Identifies the customer&apos;s intent collected on the NLU IVR. Applies only if the incoming call comes from the IVR.</inlineHelpText>
    <label>Intent</label>
    <type>TextArea</type>
</CustomField>