force-app/zurich-base/main/default/objects/Activity/fields/IsRelatedToComercialPlan__c.field-meta.xml
<CustomField>
    <fullName>IsRelatedToComercialPlan__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que indica si la tarea se ha asociado con el objeto Plan Comercial</description>
    <label>Is Related To Comercial Plan</label>
    <type>Checkbox</type>
</CustomField>