force-app/zurich-base/main/default/objects/Activity/fields/Klinc_CallResult__c.field-meta.xml
<CustomField>
    <fullName>Klinc_CallResult__c</fullName>
    <description>KLINC:  Indica el resultado de la llamada</description>
    <label>Call result</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Valid</fullName>
            </value>
            <value>
                <fullName>Wrong number</fullName>
            </value>
            <value>
                <fullName>No answer</fullName>
            </value>
            <value>
                <fullName>Replanned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>