force-app/zurich-base/main/default/objects/Activity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <description>Motivo de pérdida para la App Ventas, se visualiza para las llamadas</description>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Policy-Interested later on</fullName>
                <label>No quiero póliza-Interesado más adelante</label>
            </value>
            <value>
                <fullName>No Policy-Interested, managed by my agent</fullName>
                <label>No quiero póliza-Interesado, pero prefiero que lo gestione mi agente</label>
            </value>
            <value>
                <fullName>No Policy-Better competition conditions</fullName>
                <label>No quiero póliza-Mejores condiciones competencia</label>
            </value>
            <value>
                <fullName>No Policy-Lack/limitation of coverage</fullName>
                <label>No quiero póliza-Falta/limitación de coberturas</label>
            </value>
            <value>
                <fullName>No Policy-Insurance required by the bank</fullName>
                <label>No quiero póliza-Seguro obligado con el banco</label>
            </value>
            <value>
                <fullName>No Policy-Already take a policy</fullName>
                <label>No quiero póliza-Ya ha contratado póliza</label>
            </value>
            <value>
                <fullName>No Policy-Bad experience</fullName>
                <label>No quiero póliza-Mala experiencia</label>
            </value>
            <value>
                <fullName>No Policy-Need higher discount</fullName>
                <label>No quiero póliza-Necesita descuento mayor</label>
            </value>
            <value>
                <fullName>No Policy-Incidence unresolved with policy</fullName>
                <label>No quiero póliza-Incidencia actual no resuelta con alguna póliza en vigor</label>
            </value>
            <value>
                <fullName>CARS-Uses/type of risk</fullName>
                <label>AUTO-Usos/tipo de riesgo</label>
            </value>
            <value>
                <fullName>CARS-Non-contractable guaranties</fullName>
                <label>AUTO-Garantías no contratables</label>
            </value>
            <value>
                <fullName>CARS-Age of risk</fullName>
                <label>AUTO-Antigüedad del riesgo</label>
            </value>
            <value>
                <fullName>CARS-Score</fullName>
                <label>AUTO-Score</label>
            </value>
            <value>
                <fullName>CARS-Bonus/Malus outside of contracting rules</fullName>
                <label>AUTO-Bonus/Malus fuera de normas de contratación</label>
            </value>
            <value>
                <fullName>CARS-Driver</fullName>
                <label>AUTO-Conductor</label>
            </value>
            <value>
                <fullName>CARS-Other reasons</fullName>
                <label>AUTO-Otros motivos</label>
            </value>
            <value>
                <fullName>HOME-Uses/type of risk</fullName>
                <label>HOGAR-Usos/tipo de riesgo</label>
            </value>
            <value>
                <fullName>HOME-Non-contractable guaranties</fullName>
                <label>HOGAR-Garantías no contratables</label>
            </value>
            <value>
                <fullName>HOME-Age of risk</fullName>
                <label>HOGAR-Antigüedad del riesgo</label>
            </value>
            <value>
                <fullName>HOME-Payment Installment</fullName>
                <label>HOGAR-Pago Fraccionamiento</label>
            </value>
            <value>
                <fullName>HOME-Jewellery and valuable objects</fullName>
                <label>HOGAR-Joyas y objetos de valor</label>
            </value>
            <value>
                <fullName>HOME-Type of housing construction</fullName>
                <label>HOGAR-Tipo de fabricación vivienda</label>
            </value>
            <value>
                <fullName>HOME-Uninhabited</fullName>
                <label>HOGAR-Despoblado</label>
            </value>
            <value>
                <fullName>HOME-Unoccupied housing</fullName>
                <label>HOGAR-Vivienda deshabitada</label>
            </value>
            <value>
                <fullName>HOME-Other reasons</fullName>
                <label>HOGAR-Otros motivos</label>
            </value>
            <value>
                <fullName>LIFE-Capital</fullName>
                <label>VIDA-Capitales</label>
            </value>
            <value>
                <fullName>LIFE-Age</fullName>
                <label>VIDA-Edad</label>
            </value>
            <value>
                <fullName>LIFE-High risk sport</fullName>
                <label>VIDA-Deporte de riesgo</label>
            </value>
            <value>
                <fullName>LIFE-Illness</fullName>
                <label>VIDA- Enfermedad</label>
            </value>
            <value>
                <fullName>LIFE-Travel abroad + 60d</fullName>
                <label>VIDA-Viaje al extranjero +60d</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>