force-app/zurich-base/main/default/objects/Activity/fields/Mandatory_Closing_Observation__c.field-meta.xml
<CustomField>
    <fullName>Mandatory_Closing_Observation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mandatory Closing Observation</label>
    <type>Checkbox</type>
</CustomField>