force-app/zurich-base/main/default/objects/Activity/fields/MediadorCaso__c.field-meta.xml
<CustomField>
    <fullName>MediadorCaso__c</fullName>
    <label>Mediador Caso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>