force-app/zurich-base/main/default/objects/Activity/fields/MediatedCustomer__c.field-meta.xml
<CustomField>
    <fullName>MediatedCustomer__c</fullName>
    <label>Mediated Customer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>