force-app/zurich-base/main/default/objects/Activity/fields/MeetingMinutes__c.field-meta.xml
<CustomField>
    <fullName>MeetingMinutes__c</fullName>
    <label>Meeting Minutes</label>
    <type>TextArea</type>
</CustomField>