force-app/zurich-base/main/default/objects/Activity/fields/Mi_Centro__c.field-meta.xml
<CustomField>
    <fullName>Mi_Centro__c</fullName>
    <formula>Owner:User.Department = $User.Department</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mi Centro</label>
    <type>Checkbox</type>
</CustomField>