force-app/zurich-base/main/default/objects/Activity/fields/Mi_Equipo_Escala__c.field-meta.xml
<CustomField>
    <fullName>Mi_Equipo_Escala__c</fullName>
    <description>[USP] Campo para detectar que una tarea ha sido escalada por un usuario que está por debajo de un supervidor.</description>
    <formula>$User.Id = CreatedBy.ManagerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mi Equipo Escala</label>
    <type>Checkbox</type>
</CustomField>