force-app/zurich-base/main/default/objects/Activity/fields/MI_Equipo_Escalada__c.field-meta.xml
<CustomField>
    <fullName>Mi_Equipo_Escalada__c</fullName>
    <description>[USP] Campo para ver tareas de casos escalados a usuarios por debajo del supervisor</description>
    <formula>Owner:User.ManagerId = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MI Equipo Escalada</label>
    <type>Checkbox</type>
</CustomField>