force-app/zurich-base/main/default/objects/Activity/fields/MiEquipo__c.field-meta.xml
<CustomField>
    <fullName>MiEquipo__c</fullName>
    <description>OCS. Informado a true cuando el manager del usuario activo es el mismo que el del propietario del caso</description>
    <formula>$User.ManagerId = Owner:User.ManagerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mi Equipo</label>
    <type>Checkbox</type>
</CustomField>