force-app/zurich-base/main/default/objects/Activity/fields/MultiIdentifiedByANI__c.field-meta.xml
<CustomField>
    <fullName>MultiIdentifiedByANI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>OCS - Informes: estadística de cuántas veces al intentar identificar por ANI__c han aparecido varios clientes.</description>
    <label>Multi Identified By ANI</label>
    <type>Checkbox</type>
</CustomField>