force-app/zurich-base/main/default/objects/Activity/fields/MultiIdentifiedByNIF__c.field-meta.xml
<CustomField>
    <fullName>MultiIdentifiedByNIF__c</fullName>
    <defaultValue>false</defaultValue>
    <description>OCS - Informes: estadística de cuántas veces al intentar identificar por NationalId__c han aparecido varios clientes.</description>
    <label>Multi Identified By NIF</label>
    <type>Checkbox</type>
</CustomField>