force-app/zurich-base/main/default/objects/Activity/fields/NationalId__c.field-meta.xml
<CustomField>
    <fullName>NationalId__c</fullName>
    <description>Informa el Id. de documento (NIF) recogido en la IVR., Vacío si la llamada no lo ha informado a través de la IVR.</description>
    <inlineHelpText>Informs the customer&apos;s National Identifier collected within the IVR. Empty if not collected.</inlineHelpText>
    <label>NIF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>