force-app/zurich-base/main/default/objects/Activity/fields/NLUTypificationFailed__c.field-meta.xml
<CustomField>
    <fullName>NLUTypificationFailed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>OCS - Aparece en el Informe de Tasa de acierto de la NLU. Con un Flow-Trigger se activa el check en las ocasiones en las que el agente tipificó el caso de manera diferente que la NLU</description>
    <label>NLU Typification Failed</label>
    <type>Checkbox</type>
</CustomField>