force-app/zurich-base/main/default/objects/Activity/fields/NoIdentified__c.field-meta.xml
<CustomField>
    <fullName>NoIdentified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>OCS - Informes: estadística de cuántos clientes no han podido ser identificados ni por ANI__c ni por NationalId__c. False quiere decir que no aplica, no que se haya identificado.</description>
    <label>No Identified</label>
    <type>Checkbox</type>
</CustomField>