force-app/zurich-base/main/default/objects/Activity/fields/OrderOfTheDay__c.field-meta.xml
<CustomField>
    <fullName>OrderOfTheDay__c</fullName>
    <label>Order of the day</label>
    <type>TextArea</type>
</CustomField>