force-app/zurich-base/main/default/objects/Activity/fields/PhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>PhoneNumber__c</fullName>
    <description>ZE/OCS. Permite a gestores y advisors informar el teléfono cuando se cree la tarea de forma manual</description>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>