force-app/zurich-base/main/default/objects/Activity/fields/Premium_amount__c.field-meta.xml
<CustomField>
    <fullName>Premium_amount__c</fullName>
    <label>Premium amount</label>
    <length>10</length>
    <type>Text</type>
</CustomField>