force-app/zurich-base/main/default/objects/Activity/fields/PriorIntermediaryOwner__c.field-meta.xml
<CustomField>
    <fullName>PriorIntermediaryOwner__c</fullName>
    <description>Guardamos el owner anterior para aquellas tareas que pertenecen a un usuario ZRM. De esta forma en caso de recuperar visibilidad se recuperará de aquí el valor anterior</description>
    <label>Prior Intermediary Owner</label>
    <length>18</length>
    <type>Text</type>
</CustomField>