force-app/zurich-base/main/default/objects/Activity/fields/QueueTime__c.field-meta.xml
<CustomField>
    <fullName>QueueTime__c</fullName>
    <description>Tiempo en cola</description>
    <label>Queue Time</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>