force-app/zurich-base/main/default/objects/Activity/fields/Reference_number__c.field-meta.xml
<CustomField>
    <fullName>Reference_number__c</fullName>
    <description>Número de referencia Póliza / oferta / otros</description>
    <inlineHelpText>Número de referencia Póliza/oferta/otros</inlineHelpText>
    <label>Reference number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>