force-app/zurich-base/main/default/objects/Activity/fields/Related_Case_Status__c.field-meta.xml
<CustomField>
    <fullName>Related_Case_Status__c</fullName>
    <label>Related Case Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>