force-app/zurich-base/main/default/objects/Activity/fields/Related_to_Intermediary_Group__c.field-meta.xml
<CustomField>
    <fullName>Related_to_Intermediary_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Related to Intermediary Group</label>
    <type>Checkbox</type>
</CustomField>