force-app/zurich-base/main/default/objects/Activity/fields/RelatedCallObject__c.field-meta.xml
<CustomField>
    <fullName>RelatedCallObject__c</fullName>
    <label>Related Call Object Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>