force-app/zurich-base/main/default/objects/Activity/fields/RelatedToIntermediary__c.field-meta.xml
<CustomField>
    <fullName>RelatedToIntermediary__c</fullName>
    <description>Identifica si el evento está relacionado con un mediador.</description>
    <label>Related with an intermediary?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>